--- a/fdphd.bib
+++ b/fdphd.bib
@@ -409,6 +409,19 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={1999},
   publisher={IEEE}
 }
+@article{pendry2000negative,
+  title={Negative refraction makes a perfect lens},
+  author={Pendry, John Brian},
+  journal={Physical review letters},
+  volume={85},
+  number={18},
+  pages={3966},
+  year={2000},
+  publisher={APS}
+}
+
+
+
 @article{maslovski2002wire,
   title={Wire media with negative effective permittivity: A quasi-static model},
   author={Maslovski, SI and Tretyakov, SA and Belov, PA},
