--- a/theory.tex
+++ b/theory.tex
@@ -2,9 +2,15 @@
 %% *  fix that f is used as frequency (replace with omega) and also as arbitrary function f(t) 
 %% *  get rid of the term "response function" for susceptibility
 %% *  ensure more consistent usage of "dispersion curve", "dispersion relation" and "solution of Maxwell equations"
+% TODO 2015-01-23: 
+% 1) note that zero PBG width = dirac point = zero effective photon mass 
+% 2) investigate how mode anticrossing relates to the significant spatial dispersion
+% 3) find out why in effparam.py the data need to be conjugated, when MEEP seems to use the exp(-iwt) convention
+% 4) possibly write into the numeric.tex about using the Debye model, with a scan for the damping coefficient (0.1 omega0 ... 100 omega0)
+% 5) note about the meep peculiarity of notation: 'omega'=omega0/2pi , 'gamma'=gamma/2pi, 'sigma'=Deltaeps = F/omega0^2
 
 
-\section{Electrodynamics of local homogeneous media} 
+\section{Electrodynamics of local homogeneous media} %{{{
 \subsection{Electromagnetic wave in vacuum}
 \paragraph{Maxwell equations}  %{{{
 In the realm of classical physics, the electromagnetic phenomena are governed by the \textit{Maxwell equations} in the following form.
@@ -427,8 +433,8 @@ Whenever the wave vector $\KK$ is nearly perpendicular to the isofrequency conto
 %% maybe?? the propagation velocities are more complicated 
 
 %}}}
-
-\section{Electrodynamics of nonlocal homogeneous media} 
+%}}}
+\section{Electrodynamics of nonlocal homogeneous media} %{{{
 \subsection{Nonlocal response} 
 \paragraph{Definition of nonlocal media}%{{{
 The previous two chapters that concerned local media can be generalized into the theory of \textit{nonlocal} (or, \textit{spatially dispersive}) media.  The downside of the spatial-dispersive model of media is that it is more complicated, leading e.g. to an implicit dispersion equation. Its great advantage is however that it provides a necessary level of generality for the description of periodic structures discussed below. 
@@ -715,8 +721,8 @@ A temporally limited optical pulse will be always more or less distorted upon pr
 %% \cite{bruleanalysis}
 %% \cite{makarov2013kramers}
 %% }%}}}
-
-\section{Electromagnetic waves in periodic structures}
+%}}}
+\section{Electromagnetic waves in periodic structures}%{{{
 \subsection{Periodic structures and the Bloch theorem}
 \paragraph{Inhomogeneity}%{{{
 The previous sections discussed infinite media, with the only deviation from homogenity at an interface of two media, where refraction of the waves is observed, and it was shown that the resulting orientation of the wave vector and of the group velocity could be easily deduced on geometrical basis. The amplitude of the reflected and refracted waves can be also easily computed for local media, whereas their computation for nonlocal media is much less straightforward. 
@@ -1040,6 +1046,10 @@ This difference arises from the fact that the behaviour of the structure does no
 % Interaction between non-Bragg band gaps in 1D metamaterial photonic crystals
 
 %% %}}}
+%}}}
+
+
+
 
 \section{Historical notes on metamaterials and photonic crystals}
 \subsection{One history of three paradigms} %{{{
@@ -1135,16 +1145,21 @@ Periodic structures denoted as \textit{artificial dielectrics} \cite{brown1955pr
 
 In the approximation of local media, the \textit{effective permittivity} $\eeff(\omega)$ of this type of artificial dielectrics had therefore a frequency range of negative values, or at least lower than one. This feature lead to the occasional use of the term \textit{artificial plasma} \cite{merkel1973simulation}. 
 
-The effective refractive index $\Neff(\omega)$ in such cases of $\eeff(\omega)<1$ was also lower than that of vacuum \cite{brown1953artificial}, but, following Eq. (\ref{eq_dispeqN}), it could not become negative, since the effective permeability $\meff(\omega) > 0$ was still positive. The unit cell size was kept much smaller than the wavelength, so the problem of \textit{homogenization} appeared as settled and the nonlocal effects apparently did not cause much concerns.
+The effective refractive index $\Neff(\omega)$ in all cases of $\eeff(\omega)<1$ was also lower than that of vacuum \cite{brown1953artificial}, but, following
+Eq. (\ref{eq_dispeqN}), 
+\begin{equation} N(\omega) := k(\omega) \, \frac{c}{\omega} \equiv \sqrt{\epsrl(\omega)\murl(\omega)}, \tag{\ref{eq_dispeqN}\again} \end{equation}
+it could not become negative, since the effective permeability $\meff(\omega) > 0$ was still positive. The unit cell size was kept much smaller than the wavelength, so the problem of \textit{homogenization} appeared as settled and the nonlocal effects apparently did not cause much concerns.
 
-\mdf{Continuous wire arrays in waveguides etc., }
+% \mdf{Continuous wire arrays in waveguides etc., } ??
 
-\paragraph{Negative effective permeability and refractive index} %  - resonant magnetic dipole arrays
+\paragraph{Negative effective permeability and negative refractive index} %  - resonant magnetic dipole arrays
 
 \mdf{PK-"The word “metamaterial” (MM) appeared first in the paper by Smith et al. in 2000 [6] where a structured material" -- is it true? 
 Although somewhat redundant to \textit{artificial dielectrics}, it can be viewed as more fortunate as 
-It gained on significant popularity around the millenium break, probably in connection with the Pendry's paper \cite{pendry1999magnetism} which outlined how a negative index of refraction can be obtained in a periodic medium, where metallic wires introduce $\eeff<0$ and small metallic loops embedded in the lattice, known as \textit{split-ring resonators} (SRR), introduce $\meff<0$.
+It gained on significant popularity in the early 2000s, probably in connection with the Pendry's paper \cite{pendry1999magnetism} which outlined how a negative index of refraction can be obtained in a periodic medium, where metallic wires introduce $\eeff<0$ and small metallic loops embedded in the lattice, known as \textit{split-ring resonators} (SRR), introduce $\meff<0$.
 }
+
+
 
 \textit{split-ring resonator}
 
@@ -1391,21 +1406,10 @@ The question of indefinite sign can be decided using the assumption of medium \t
 %Scaling and non-scaling properties [Zhou PRL 2005]
 %(Mode curve anticrossing)
 %Babinet principle
-%(Quantum states in left-handed media?)
-%
-%Building metamaterials: key principles
-%Homogenisation
-%methods, issues, desired homogenized parameters
 %Metal functions
 %diluted metal → Pendry1996's low frequency plasmons
-%metallic resonators: negative mu from SRR/Horseshoe/double-stripe
 %Bianisotropy and chirality
-%SRR and double-SRR
-%keeping rotational-translational symmetry
-%tunability
-%MM impedance and coupling to free-space waves
-%Mode coupling
-%capacitive/resistive, behaviour, conditions, applications
+
 %relations between MM and photonic crystal
 %Higher-order Bloch modes
 %
@@ -1418,19 +1422,4 @@ The question of indefinite sign can be decided using the assumption of medium \t
 		%Wood anomaly in hole arrays
 		%Standing SPP wave
 	%“thin wires [8], [28], Swiss rolls [9], SRRs [9], electric SRRs (eSRRs) [29], [30], pairs of rods [10], [12], [31], pair of crosses [32], fishnets [17], [33]”
-%
-%== Weird ideas to elaborate ==
-%* helical wire medium -> higher inductive load -> enables low plasma freq even for thicker wires
-	%---> calculate FDTD
-	%---> measure   TDTS with light bulb wires!
-%* Possibility of standing phonon-polariton on SiC (!) 
-%* try the anisotropic magnetic goo from the drawing board for children (but for electrical response)
-%* find out how they could achieve negative phase speed
-%* quantum point of view to negative phase/group velocity 
 
-% TODO 2015-01-23: 
-% 1) note that zero PBG width = dirac point = zero effective photon mass 
-% 2) investigate how mode anticrossing relates to the significant spatial dispersion
-% 3) find out why in effparam.py the data need to be conjugated, when MEEP seems to use the exp(-iwt) convention
-% 4) possibly write into the numeric.tex about using the Debye model, with a scan for the damping coefficient (0.1 omega0 ... 100 omega0)
-% 5) note about the meep peculiarity of notation: 'omega'=omega0/2pi , 'gamma'=gamma/2pi, 'sigma'=Deltaeps = F/omega0^2
