--- a/intro.tex
+++ b/intro.tex
@@ -84,10 +84,10 @@ At the end of the thesis, somewhat critical conclusions from the above results a
 
 \section{Conventions used}%{{{
 Throughout the thesis, a single or double apostrophe ($x', x''$) refers to the real and imaginary part of a complex number ($x$). Italic symbols represent the magnitudes of vectors, which are denoted by respective bold symbols (e.g. $k = |\kk|$). Components of vectors are denoted by small indices, such as $k_x, k_y, k_z$. 
-rhe explicit time, space or frequency dependence of quantities are omitted when it can not cause confusion. So for electric field we write $\E$ instead of $\E(\rr,t)$.
+%The explicit time, space or frequency dependence of quantities are omitted when it can not cause confusion.
 
-An important note shall be made on the sign convention for the complex wave, introduced in Eq. \ref{eq_pw}.
-The `engineering' convention of time dependence of the complex exponential $e^{+\ii \omega t}$ is used, but this is only due to the author's feeling that it is more natural when the wave phase grows in time. Such a convention is used in  roughly a half of the literature, e.g. \cite[p. 9]{engheta2006book}, \cite[pp. 21 and 99]{krowne2007book}, \cite[Chapters 1-4, 6, 9 and 10]{eleftheriades2005book}.  In the remaining part, e.g. \cite[chapters 5, 7, 8]{eleftheriades2005book}, \cite{klingshirn2007semiconductor}, \cite{jackson1962book}, \cite{veselago1968}, \cite{born1999book}, \cite[p. 5]{noginov2011book}, the opposite, `optical', convention is used with time dependence of $e^{-\ii \omega t}$. The choice of $e^{+\ii\omega t}$ or $e^{-\ii\omega t}$ determines the sign of the imaginary part in virtually all complex quantities discussed in this thesis, but with correct interpretation it makes no difference in the physical conclusions.
+An important note shall be made on the sign convention for the complex wave, as introduced in Eq. \ref{eq_pw}.
+The `engineering' convention of time dependence of the complex exponential $e^{+\ii \omega t}$ is used, but this is only due to the author's feeling that it is more natural when the wave phase grows in time. Such a convention is shared with roughly a half of the literature, e.g. \cite[p. 9]{engheta2006book}, \cite[pp. 21 and 99]{krowne2007book}, \cite[Chapters 1-4, 6, 9 and 10]{eleftheriades2005book}.  In the remaining part, e.g. \cite[chapters 5, 7, 8]{eleftheriades2005book}, \cite{klingshirn2007semiconductor}, \cite{jackson1962book}, \cite{veselago1968}, \cite{born1999book}, \cite[p. 5]{noginov2011book}, the opposite, `optical', convention is used with time dependence of $e^{-\ii \omega t}$. The choice of $e^{+\ii\omega t}$ or $e^{-\ii\omega t}$ determines the sign of the imaginary part in virtually all complex quantities discussed in this thesis, but with correct interpretation it makes no difference in the physical conclusions.
 %as it is only a formal simplification.
 In the real world, observable fields do not have any imaginary component so the real part of the result has to be taken. 
 %% ---- "ENGINEERING" in favor of +iwt , and then perhaps using eps = (eps' - i eps''), or getting along with all-negative eps''
@@ -96,8 +96,8 @@ In the real world, observable fields do not have any imaginary component so the 
 %% Panofsky & Phillips 1962, p 200 ??
 %% ---- "OPTICS" in favor of -iwt, then using the simpler eps = (eps' + i eps'')
 
-In the $e^{+\ii\omega t}$ convention, many parameters of a passive (lossy) system are restricted to have \textit{negative imaginary part}. An additional complication arises from that a part of the authors using $e^{+\ii\omega t}$ convention wish to represent the imaginary part as \textit{positive}, and they define complex quantities as, e.g., $\varepsilon = \varepsilon' - \ii \varepsilon''$, % TODO verify if this is e.g. "Wallen2011-Anti-resonant response of ..."
-thus in their case $\varepsilon''\equiv -\text{Im}(\varepsilon)$. Thorough the thesis, we however represent the real and imaginary parts naturally as $\varepsilon := \varepsilon' + \ii \varepsilon''$.
+In the $e^{+\ii\omega t}$ convention, many parameters of a passive (lossy) system are restricted to have \textit{negative imaginary part}. An additional complication arises from that a part of the authors using $e^{+\ii\omega t}$ convention still wish to represent the imaginary part as \textit{positive}, and they define complex quantities as, e.g., $\varepsilon = \varepsilon' - \ii \varepsilon''$, % TODO verify if this is e.g. "Wallen2011-Anti-resonant response of ..."
+thus in their case $\varepsilon''\equiv -\text{Im}(\varepsilon)$. This is not the case of this thesis, and the real and imaginary parts are represented naturally as $\varepsilon := \varepsilon' + \ii \varepsilon''$.
 
 The unit system differs thorough the literature, too. Some of the references, e.g. \cite{landau1984electrodynamics, agranovich2006spatial, krowne2007book_agran} use the older centimeter-gram-second (CGS) system, which for instance leaves out the dimension constants of $\varepsilon_0, \mu_0$. The whole thesis uses consistently the meter-kilogram-second (SI) system.
 
