how to correct the group velocity in Fig. 2.8?

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -11,6 +11,7 @@
   volume = {8771},
   doi = {10.1117/12.2017006},
   URL = {http://dx.doi.org/10.1117/12.2017006},
+  note = {Poster},
 }
 
 %% Conference in St. Petersburg, August, 2012
@@ -33,7 +34,6 @@
   pages = {30492--30503}, 
   publisher = {OSA},
   volume = {22}, 
-  month = {Dec},
   url = {http://www.opticsexpress.org/abstract.cfm?URI=oe-22-25-30492},
   doi = {10.1364/OE.22.030492},
 }
@@ -158,7 +158,31 @@
   publisher={Optical Society of America}
 }
 % TODO Optics Express, Vol. 22, Issue 19, pp. 23034-23042 (2014) http://dx.doi.org/10.1364/OE.22.023034
+@inproceedings{mitrofanov2014nearirmmw,
+  title={Near-field probing of the THz Mie magnetic mode in a single sub-wavelength TiO 2 sphere},
+  author={Mitrofanov, Oleg and Dominec, Filip and Navarro-Cia, M and Kuzel, Petr and Reno, John L and Brener, Igal and Mounaix, Patrick},
+  booktitle={Infrared, Millimeter, and Terahertz waves (IRMMW-THz), 2014 39th International Conference on},
+  pages={1--2},
+  year={2014},
+  organization={IEEE}
+}
 
+@inproceedings{kadlec2014electric,
+  title={Electric-field tunable THz metamaterials based on strained SrTiO 3 films},
+  author={Kadlec, Christelle and Skoromets, Volodymyr and Dominec, Filip and Nemec, Hynek and Kadlec, Filip and Schubert, Jeffrey and Heyes, J and Chowdhury, Dibakar Roy and Chen, Hua-Tsung and Kuzel, Petr},
+  booktitle={Advanced Electromagnetic Materials in Microwaves and Optics (Metamaterials), 2014, 8th International Congress on},
+  pages={358--360},
+  year={2014},
+  organization={IEEE}
+}
+@inproceedings{mitrofanov2015magnetic,
+  title={Magnetic dipole and electric dipole resonances in TiO2 microspheres at terahertz frequencies},
+  author={Mitrofanov, Oleg and Domenic, Filip and Ku{\v{z}}el, Petr and Reno, John L and Brener, Igal and Chung, U-Chan and Elissalde, Cathy and Maglione, Mario and Mounaix, Patrick},
+  booktitle={SPIE OPTO},
+  pages={937005--937005},
+  year={2015},
+  organization={International Society for Optics and Photonics}
+}
 
 
 
