--- a/result.tex
+++ b/result.tex
@@ -1,16 +1,7 @@
 \label{section_result}
-%%% TODO TODO TODO TODO TODO TODO 
-%%% Hole : Results - rearrange, plot, write, finish
-%%% TODO TODO TODO TODO TODO TODO 
-
-\paragraph{Antiresonances and problems with local effective parameters}
-%% TODO add to the first Mie resonance discussed
-\add{Anti-resonant response of resonant inclusions : "antiresonance "may not" come from periodicity, as it is also observed in random structures"; %% \cite{wallen2010}
-Restoring the physical meaning of MM cosstitutive parameters %%  \cite{alu2010}
-}
 
 
-\section{Dielectric slab} % references to ->%{{{
+\section{Dielectric slab} %{{{
 The structure composed of alternating dielectric layers, effectively a one-dimensional photonic crystal, has been investigated thoroughly in the previous decades. We review it mostly for comparison with the structures presented in the following. 
 
 \begin{figure}[ht] \caption{Dispersion curves for a one-dimensional photonic crystal, computed using PWEM. The side plots show the shape of the fields in the $(y,z)$ plane, at the frequencies of the band edges. Note that each field plot spans two unit cells. The electric field $E_x$ is plot as color map. \textbf{a)} In free space, \textbf{b)} in dielectric layers with permittivity $\varepsilon = 12$ and 15 \% thickness (outlined by black lines)} \label{fg_1dbd} \centering 
@@ -20,10 +11,9 @@ The structure composed of alternating dielectric layers, effectively a one-dimen
 % TODO draw and append axes+colorbar to the field distribution plots
 % TODO visualise the permittivity, but how?
 
-In Fig. \ref{fg_1dbd}a, we can see the folded dispersion curves for a plane wave propagating in vacuum, as already discussed above. 
+Fig. \ref{fg_1dbd}a shows the folded dispersion curves for a plane wave propagating in vacuum.
 %As predicted by the Bloch-Floquet theorem (\ref{eq_bloch}), the fields are periodic over each cell whenever the wavenumber $k$ touches the Brillouin zone boundary. 
 To save space, we plot the  dispersion curves as \textit{folded}, but one can easily imagine how the curve unfolds into a straight light line. For any frequency $f$, there is a wavenumber $k$ corresponding to a propagating wave. 
-
 
 The situation is different when we introduce periodic dielectric layers as in Fig. \ref{fg_1dbd}b. In the band structure, we observe allowed bands with \textit{band gaps} between them. At the frequencies in a bandgap, the wave can not propagate through the structure. The first photonic band ends when half the wavelength matches the cell spacing, i.e. when $2\pi / K= a/2$. The next band starts at the same wavenumber $K$, but the wave now has higher frequency because it is shifted by half its period so that it maximizes electric energy in air. For a 1-D photonic crystal, we can generally conclude that in order to move up on the frequency axis,
 \begin{enumerate}
