--- a/theory.tex
+++ b/theory.tex
@@ -769,7 +769,7 @@ Note that the Bloch theorem does not determine the shape of $\mathbf{u_e}(\rr)$,
 % TODO example illustration of Bloch wave -> plotted in Python
 
 %}}}
-\paragraph{Proof of the Bloch theorem}%{{{
+\paragraph{Proof of the Bloch theorem in one dimension}%{{{
 This theorem is essential for understanding the electromagnetic behaviour of periodic structures, and it deserves a proof. Originally, it was developed for the electron wave function $\psi$ in crystals on the basis of quantum mechanics. The outline of such a proof in one dimension, which is the most often found in textbooks (e.g. \cite[p. 134]{ashcroft2005solid}) is based on the following:
 \label{blochproof}
 \begin{enumerate}
@@ -784,7 +784,7 @@ $\exists K\in \mathbb{C}: \hat T\psi = e^{-\ii Ka}\psi$. \todo{HT=TH implies eig
 Two commuting operators share the same eigenstates, which means that the electron wave function at a given energy (i.e. Hamiltonian eigenfunction) must also have a discrete translational symmetry provided its phase can change between atoms (i.e. it is an eigenfunction of the non-hermitian translation operator).
 
 %}}}
-\paragraph{The proof in the electromagnetic formulation}%{{{
+\paragraph{The Bloch theorem proof in the electromagnetic formulation}%{{{
 The steps can be reformulated replacing the abstract Hamiltonian with an operator derived from the Maxwell equations. In a periodic structure one can no longer assume the solution in the form of a plane wave (\ref{eq_pw}), but as long as the structure is time-invariant and linear, the monochromatic electric and magnetic fields can still be decomposed into a product of some complex function of space position, and a harmonic function of time:
 \begin{equation} 
 \begin{array}{cc}
@@ -1363,6 +1363,12 @@ The question of indefinite sign can be decided using the assumption of medium \t
 \todo{add the comments from http://www.wave-scattering.com/negative.html}
 }
 %}}}
+\add{
+	\paragraph{Antiresonances and problems with local effective parameters}
+%% TODO add to the first Mie resonance discussed
+Anti-resonant response of resonant inclusions : "antiresonance "may not" come from periodicity, as it is also observed in random structures"; %% \cite{wallen2010}
+Restoring the physical meaning of MM cosstitutive parameters %%  \cite{alu2010}
+}
 
 %% finish this? or leave this out?
 %%      \section{Materials available for metamaterial construction}
